Add validation in format image

--- a/AttachmentScannerUI/resource/features.properties
+++ b/AttachmentScannerUI/resource/features.properties
@@ -1,10 +1,10 @@
 #AttachmentScannerUI
-#Wed Dec 11 10:11:33 VET 2013
+#Thu Dec 12 10:51:29 VET 2013
 WEB=http\://dcs.net.ve
 PATH_IMAGE=resource/image/
 PATH_LOCALE=resource/locale/
 PATH_PROPERTIES=resource/features.properties
-DEFAULT_LOCALE=es_VE
+DEFAULT_LOCALE=en_US
 VENDOR=Double Click Sistemas C.A. - RIF J-31576020-7
 APP_NAME=AttachmentScannerUI
 OS=Linux
