Add link to documentation

--- a/AttachmentScannerUI/resource/features.properties
+++ b/AttachmentScannerUI/resource/features.properties
@@ -1,5 +1,5 @@
 #AttachmentScannerUI
-#Thu Dec 12 10:51:29 VET 2013
+#Fri Dec 13 15:48:10 VET 2013
 WEB=http\://dcs.net.ve
 PATH_IMAGE=resource/image/
 PATH_LOCALE=resource/locale/
@@ -7,5 +7,8 @@ PATH_PROPERTIES=resource/features.properties
 DEFAULT_LOCALE=en_US
 VENDOR=Double Click Sistemas C.A. - RIF J-31576020-7
 APP_NAME=AttachmentScannerUI
+DOCUMENTATION=http\://wiki.idempiere.org/en/Plugin\:_Attachment_Scanner
 OS=Linux
 VERSION=1.2.1.B
+DEFAULT_HOST=127.0.0.1
+DEFAULT_PORT=6566
