Add resolution to test app

--- a/AttachmentScannerUI/resource/features.properties
+++ b/AttachmentScannerUI/resource/features.properties
@@ -1,14 +1,15 @@
 #AttachmentScannerUI
-#Fri Dec 13 15:48:10 VET 2013
+#Thu Dec 19 15:44:31 VET 2013
 WEB=http\://dcs.net.ve
+DEFAULT_RESOLUTION=75
 PATH_IMAGE=resource/image/
+DEFAULT_HOST=127.0.0.1
 PATH_LOCALE=resource/locale/
+DEFAULT_PORT=6566
 PATH_PROPERTIES=resource/features.properties
-DEFAULT_LOCALE=en_US
+DEFAULT_LOCALE=es_VE
 VENDOR=Double Click Sistemas C.A. - RIF J-31576020-7
 APP_NAME=AttachmentScannerUI
-DOCUMENTATION=http\://wiki.idempiere.org/en/Plugin\:_Attachment_Scanner
 OS=Linux
+DOCUMENTATION=http\://wiki.idempiere.org/en/Plugin\:_Attachment_Scanner
 VERSION=1.2.3.B
-DEFAULT_HOST=127.0.0.1
-DEFAULT_PORT=6566
